libflipro/ubuntu/libflipro.h


typedef enum
{
	FPRO_DEBUG_NONE,
	FPRO_DEBUG_ERROR,
	FPRO_DEBUG_WARNING,
	FPRO_DEBUG_INFO,
	FPRO_DEBUG_DEBUG,
	FPRO_DEBUG_TRACE
} FPRODBGLEVEL;
typedef enum
{
	FPRO_SENSREAD_CB_BOTTOMLEFT = 0x01,
	FPRO_SENSREAD_CB_BOTTOMRIGHT = 0x02,
	FPRO_SENSREAD_CB_TOPLEFT = 0x04,
	FPRO_SENSREAD_CB_TOPRIGHT = 0x08,
	FPRO_SENSREAD_CB_ALL = 0x0F
} FPROSENSREADCFG;
typedef struct sensor_mode_t
{
	uint32_t uiModeIndex;
	wchar_t  wcModeName[FPRO_SENSOR_MODE_NAME_LENGTH];
} FPROSENSMODE;
typedef enum
{
	FPRO_GAIN_TABLE_LOW_CHANNEL,
	FPRO_GAIN_TABLE_HIGH_CHANNEL,
	FPRO_GAIN_TABLE_CHANNEL_NUM,
} FPROGAINTABLE;
typedef struct gain_value_t
{
	uint32_t uiValue;
	uint32_t uiDeviceIndex;
} FPROGAINVALUE;
typedef enum
{
	FPRO_BLACK_ADJUST_CHAN_LDR,
	FPRO_BLACK_ADJUST_CHAN_HDR,
} FPROBLACKADJUSTCHAN;
typedef struct camera_capabilities_t
{
	uint32_t uiSize;                      
	uint32_t uiCapVersion;                
	uint32_t uiDeviceType;                
	uint32_t uiMaxPixelImageWidth;        
	uint32_t uiMaxPixelImageHeight;       
	uint32_t uiAvailablePixelDepths;      
	uint32_t uiBinningsTableSize;         
	uint32_t uiBlackLevelMax;             
	uint32_t uiBlackSunMax;               
	uint32_t uiLowGain;                   
	uint32_t uiHighGain;                  
	uint32_t uiReserved;                  
	uint32_t uiRowScanTime;               
	uint32_t uiDummyPixelNum;             
	bool     bHorizontalScanInvertable;   
	bool     bVerticalScanInvertable;     
	uint32_t uiNVStorageAvailable;        
	uint32_t uiPreFrameReferenceRows;     
	uint32_t uiPostFrameReferenceRows;    
	uint32_t uiMetaDataSize;              
} FPROCAP;
typedef enum
{
	FPRO_AUXIO_1= 0x01,
	FPRO_AUXIO_2= 0x02,
	FPRO_AUXIO_3= 0x04,
	FPRO_AUXIO_4= 0x08,
} FPROAUXIO;
typedef enum
{
	FPRO_AUXIO_DIR_IN= 0,
	FPRO_AUXIO_DIR_OUT,
} FPROAUXIO_DIR;
typedef enum
{
	FPRO_AUXIO_STATE_LOW,
	FPRO_AUXIO_STATE_HIGH,
} FPROAUXIO_STATE;
typedef enum
{
	FPRO_AUXIO_EXPTYPE_EXPOSURE_ACTIVE= 0,
	FPRO_AUXIO_EXPTYPE_GLOBAL_EXPOSURE_ACTIVE,
	FPRO_AUXIO_EXPTYPE_FIRST_ROW_SYNC,
	FPRO_AUXIO_EXPTYPE_RESERVED
} FPROAUXIO_EXPACTIVETYPE;
typedef enum
{
	FPROCMS_1 = 0,
	FPROCMS_2,
	FPROCMS_4,
} FPROCMS;
LIBFLIPRO_API FPROSensor_GetBlackSunAdjustEx(int32_t iHandle, FPROBLACKADJUSTCHAN eChan, uint32_t *pAdjustValue);
LIBFLIPRO_API FPROSensor_GetCapabilities(int32_t iHandle, FPROCAP *pCap, uint32_t *pCapLength);
LIBFLIPRO_API FPROSensor_GetGainIndex(int32_t iHandle, FPROGAINTABLE eTable, uint32_t *pGainIndex);
LIBFLIPRO_API FPROSensor_GetGainTable(int32_t iHandle, FPROGAINTABLE eTable, FPROGAINVALUE *pGainValues, uint32_t *pNumEntries);
LIBFLIPRO_API FPROSensor_GetHDREnable(int32_t iHandle, bool* pHDREnable);
LIBFLIPRO_API FPROSensor_GetMode(int32_t iHandle, uint32_t uiModeIndex, FPROSENSMODE *pMode);
LIBFLIPRO_API FPROSensor_GetModeCount(int32_t iHandle, uint32_t *pCount,uint32_t *pCurrentMode);
LIBFLIPRO_API FPROSensor_GetReadoutConfiguration(int32_t iHandle, FPROSENSREADCFG *pReadCfg);
LIBFLIPRO_API FPROSensor_GetSamplesPerPixel(int32_t iHandle, FPROCMS *pSamplesPerPixel);
LIBFLIPRO_API FPROSensor_GetScanDirection(int32_t iHandle, bool *pHInverted,bool *pVInverted);
LIBFLIPRO_API FPROSensor_GetTrainingEnable(int32_t iHandle, bool *pEnable);
LIBFLIPRO_API FPROSensor_SetBinning(int32_t iHandle, uint32_t uiXBin, uint32_t uiYBin);
LIBFLIPRO_API FPROSensor_SetBlackLevelAdjust(int32_t iHandle, uint32_t uiAdjustValue);
LIBFLIPRO_API FPROSensor_SetBlackLevelAdjustEx(int32_t iHandle, FPROBLACKADJUSTCHAN eChan, uint32_t uiAdjustValue);
LIBFLIPRO_API FPROSensor_SetBlackSunAdjust(int32_t iHandle, uint32_t uiAdjustValue);
LIBFLIPRO_API FPROSensor_SetBlackSunAdjustEx(int32_t iHandle, FPROBLACKADJUSTCHAN eChan, uint32_t uiAdjustValue);
LIBFLIPRO_API FPROSensor_SetGainIndex(int32_t iHandle, FPROGAINTABLE eTable, uint32_t uiGainIndex);
LIBFLIPRO_API FPROSensor_SetMode(int32_t iHandle, uint32_t uiModeIndex);
LIBFLIPRO_API FPROSensor_SetReadoutConfiguration(int32_t iHandle, FPROSENSREADCFG eReadCfg);
LIBFLIPRO_API FPROSensor_SetSamplesPerPixel(int32_t iHandle, FPROCMS eSamplesPerPixel);
LIBFLIPRO_API FPROSensor_SetScanDirection(int32_t iHandle, bool bHInverted, bool bVInverted);
LIBFLIPRO_API FPROSensor_SetTrainingEnable(int32_t iHandle, bool bEnable);
LIBFLIPRO_API FPROAuxIO_GetPin(int32_t iHandle, FPROAUXIO eAuxIO, FPROAUXIO_DIR *pDirection, FPROAUXIO_STATE *pState);
LIBFLIPRO_API FPROAuxIO_GetExposureActiveType(int32_t iHandle, FPROAUXIO_EXPACTIVETYPE *pType);
LIBFLIPRO_API FPROAuxIO_SetPin(int32_t iHandle, FPROAUXIO eAuxIO, FPROAUXIO_DIR eDirection, FPROAUXIO_STATE eState);
LIBFLIPRO_API FPROAuxIO_SetExposureActiveType(int32_t iHandle, FPROAUXIO_EXPACTIVETYPE eType);
LIBFLIPRO_API FPROFAck_GetEnable(int32_t iHandle, bool *pEnable);
LIBFLIPRO_API FPROFAck_SetEnable(int32_t iHandle, bool bEnable);
LIBFLIPRO_API FPROFAck_FrameAcknowledge(int32_t iHandle);
LIBFLIPRO_API FPROFAck_FrameResend(int32_t iHandle);
LIBFLIPRO_API FPROFAck_FlushImageQueue(int32_t iHandle);
LIBFLIPRO_API FPRONV_WriteNVStorage(int32_t iHandle,uint32_t uiOffset, uint8_t *pData, uint32_t uiLength);
LIBFLIPRO_API FPRONV_ReadNVStorage(int32_t iHandle, uint32_t uiOffset, uint8_t *pData, uint32_t uiLength);
LIBFLIPRO_API FPROCmd_SendRaw(int32_t iHandle, uint8_t *pData, uint32_t uiLength);
LIBFLIPRO_API FPROCmd_SendRecvRaw(int32_t iHandle, uint8_t *pTxData, uint32_t uiTxLength, uint8_t *pRxData, uint32_t *pRxLength);
LIBFLIPRO_API FPROCmd_ReadReg(int32_t iHandle, uint32_t uiReg, uint32_t *pValue);
LIBFLIPRO_API FPROCmd_WriteReg(int32_t iHandle, uint32_t uiReg, uint32_t uiValue, uint32_t uiMask);
LIBFLIPRO_API  FPRODebug_EnableLevel(bool bEnable, FPRODBGLEVEL eLevel);
LIBFLIPRO_API  FPRODebug_SetLogPath(const wchar_t *pPath);
LIBFLIPRO_VOID _cdecl FPRODebug_Write(FPRODBGLEVEL eLevel, const wchar_t *format, ...);
LIBFLIPRO_VOID FPRODebug_Write(FPRODBGLEVEL eLevel, const wchar_t *format, ...);