FLIPro/libflipro.pxd


    int32_t FPROSensor_GetBlackSunAdjustEx(int32_t iHandle, FPROBLACKADJUSTCHAN eChan, uint32_t* pAdjustValue)

    int32_t FPROSensor_GetCapabilities(int32_t iHandle, FPROCAP* pCap, uint32_t* pCapLength)

    int32_t FPROSensor_GetGainIndex(int32_t iHandle, FPROGAINTABLE eTable, uint32_t* pGainIndex)

    int32_t FPROSensor_GetGainTable(int32_t iHandle, FPROGAINTABLE eTable, FPROGAINVALUE* pGainValues, uint32_t* pNumEntries)

    int32_t FPROSensor_GetHDREnable(int32_t iHandle, bool* pEnable)

    int32_t FPROSensor_GetMode(int32_t iHandle, uint32_t uiModeIndex, FPROSENSMODE* pMode)

    int32_t FPROSensor_GetModeCount(int32_t iHandle, uint32_t* pCount, uint32_t* pCurrentMode)

    int32_t FPROSensor_GetReadoutConfiguration(int32_t iHandle, FPROSENSREADCFG* pReadCfg)

    int32_t FPROSensor_GetSamplesPerPixel(int32_t iHandle, FPROCMS* pSamplesPerPixel)

    int32_t FPROSensor_GetScanDirection(int32_t iHandle, bool* pHInverted, bool* pVInverted)

    int32_t FPROSensor_GetTrainingEnable(int32_t iHandle, bool* pEnable)

    int32_t FPROSensor_SetBinning(int32_t iHandle, uint32_t uiXBin, uint32_t uiYBin)

    int32_t FPROSensor_SetBlackLevelAdjust(int32_t iHandle, uint32_t uiAdjustValue)

    int32_t FPROSensor_SetBlackLevelAdjustEx(int32_t iHandle, FPROBLACKADJUSTCHAN eChan, uint32_t uiAdjustValue)

    int32_t FPROSensor_SetBlackSunAdjust(int32_t iHandle, uint32_t uiAdjustValue)

    int32_t FPROSensor_SetBlackSunAdjustEx(int32_t iHandle, FPROBLACKADJUSTCHAN eChan, uint32_t uiAdjustValue)

    int32_t FPROSensor_SetGainIndex(int32_t iHandle, FPROGAINTABLE eTable, uint32_t uiGainIndex)

    int32_t FPROSensor_SetMode(int32_t iHandle, uint32_t uiModeIndex)

    int32_t FPROSensor_SetReadoutConfiguration(int32_t iHandle, FPROSENSREADCFG eReadCfg)

    int32_t FPROSensor_SetSamplesPerPixel(int32_t iHandle, FPROCMS eSamplesPerPixel)

    int32_t FPROSensor_SetScanDirection(int32_t iHandle, bool bHInverted, bool bVInverted)

    int32_t FPROSensor_SetTrainingEnable(int32_t iHandle, bool bEnable)

    int32_t FPROAuxIO_GetPin(int32_t iHandle, FPROAUXIO eAuxIO, FPROAUXIO_DIR* pDirection, FPROAUXIO_STATE* pState)

    int32_t FPROAuxIO_GetExposureActiveType(int32_t iHandle, FPROAUXIO_EXPACTIVETYPE* pType)

    int32_t FPROAuxIO_SetPin(int32_t iHandle, FPROAUXIO eAuxIO, FPROAUXIO_DIR eDirection, FPROAUXIO_STATE eState)

    int32_t FPROAuxIO_SetExposureActiveType(int32_t iHandle, FPROAUXIO_EXPACTIVETYPE eType)

    int32_t FPROFAck_GetEnable(int32_t iHandle, bool* pEnable)

    int32_t FPROFAck_SetEnable(int32_t iHandle, bool bEnable)

    int32_t FPROFAck_FrameAcknowledge(int32_t iHandle)

    int32_t FPROFAck_FrameResend(int32_t iHandle)

    int32_t FPROFAck_FlushImageQueue(int32_t iHandle)

    int32_t FPRONV_WriteNVStorage(int32_t iHandle, uint32_t uiOffset, uint8_t* pData, uint32_t uiLength)

    int32_t FPRONV_ReadNVStorage(int32_t iHandle, uint32_t uiOffset, uint8_t* pData, uint32_t uiLength)

    int32_t FPROCmd_SendRaw(int32_t iHandle, uint8_t* pData, uint32_t uiLength)

    int32_t FPROCmd_SendRecvRaw(int32_t iHandle, uint8_t* pTxData, uint32_t uiTxLength, uint8_t* pRxData, uint32_t* pRxLength)

    int32_t FPROCmd_ReadReg(int32_t iHandle, uint32_t uiReg, uint32_t* pValue)

    int32_t FPROCmd_WriteReg(int32_t iHandle, uint32_t uiReg, uint32_t uiValue, uint32_t uiMask)

    int32_t FPRODebug_EnableLevel(bool bEnable, FPRODBGLEVEL eLevel)

    int32_t FPRODebug_SetLogPath(wchar_t* pPath)

    void FPRODebug_Write(FPRODBGLEVEL eLevel, wchar_t* format)
